--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@vitejs/plugin-vue": "^5.0.2",
+        "@vue/tsconfig": "^0.5.1",
         "axios": "^1.6.1",
         "laravel-vite-plugin": "^1.0.0",
-        "vite": "^5.0.0"
+        "vite": "^5.0.0",
+        "vue-tsc": "^1.8.27"
+    },
+    "dependencies": {
+        "vue": "^3.4.7"
     }
 }
