--- a/package.json
+++ b/package.json
@@ -3,14 +3,26 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+        "format": "prettier --write resources/js/"
     },
     "devDependencies": {
+        "@rushstack/eslint-patch": "^1.6.1",
+        "@types/node": "^20.10.8",
+        "@typescript-eslint/eslint-plugin": "^6.18.1",
+        "@typescript-eslint/parser": "^6.18.1",
         "@vitejs/plugin-vue": "^5.0.2",
+        "@vue/eslint-config-prettier": "^9.0.0",
+        "@vue/eslint-config-typescript": "^12.0.0",
         "@vue/tsconfig": "^0.5.1",
         "axios": "^1.6.1",
+        "eslint": "^8.56.0",
+        "eslint-plugin-vue": "^9.19.2",
         "laravel-vite-plugin": "^1.0.0",
+        "prettier": "^3.1.1",
         "vite": "^5.0.0",
+        "vite-plugin-eslint": "^1.8.1",
         "vue-tsc": "^1.8.27"
     },
     "dependencies": {
